# ooplr1

./: CMakeLists.txt  README.md
include/: eliminate_unset_bits.h
src/: eliminate_unset_bits.cpp  oop_lr1.cpp
test/: test_eliminate_bits.cpp
